Fix crash in SessionPool::requestPassword

If the connection to the imap server is lost, m_account becomes null and
requestPassword would crash trying to access a nullptr. Check m_account in
processPendingRequests and bail out if the connection is lost. Note that a
similar check is used in onPasswordRequestDone.

BUG: 415339